[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=1]
[ext_resource path="res://Menus/GameOverMenu.gd" type="Script" id=2]
[ext_resource path="res://Music and Sounds/Hover.wav" type="AudioStream" id=3]
[ext_resource path="res://Music and Sounds/Click.wav" type="AudioStream" id=4]

[node name="GameOverMenu" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 102.0
margin_top = 70.0
margin_right = 218.0
margin_bottom = 109.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 116.0
margin_bottom = 15.0
text = "GAME OVER!"
align = 1

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 116.0
margin_bottom = 19.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 23.0
margin_right = 116.0
margin_bottom = 39.0

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 56, 16 )
text = "Quit"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 60.0
margin_right = 116.0
margin_bottom = 16.0
rect_min_size = Vector2( 56, 16 )
text = "Load"

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
